Final version of python file
Add some instruction regarding icon image file.

--- a/Python Project - Web photos scraper.ipynb
+++ b/Python Project - Web photos scraper.ipynb
@@ -12,7 +12,8 @@
     "* This app does not download the full photo size but rather takes a screenshot of the image displayed in the web result page. \n",
     "Thus, reducing the download time and space taken by the photos in the folder.\n",
     "* For the app to work, you first must install a web driver. Go to [Selenium’s website](https://selenium-python.readthedocs.io/) \n",
-    "and follow the instruction for downloading your browser's web driver and place it in your **C:\\** root directory. \n",
+    "and follow the instruction for downloading your browser's web driver and place it in your **C:\\** root directory.\n",
+    "* Download the app icon image file from the project repository and place it in the same folder as the python file. \n",
     "* When you click the search button(Run scraper), you won't see anything happening. \n",
     "I chose to disable the display the website opening for search, to make it more 'cleaner' in appearance.\n",
     "Again, you can change this parameter in the code and watch how all the magic is happening!\n",
@@ -206,9 +207,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Searching in C:/Web scraper\n",
+      "Total number of files in - ant:  5\n",
+      "Total number of files in - ants:  10\n",
+      "Total number of files in - bee:  5\n",
+      "Total number of files in - bells:  5\n",
+      "Total number of files in - cow:  5\n",
+      "Total number of files in - f-15:  10\n",
+      "Total number of files in - mig-15:  5\n",
+      "Total number of files in - mig-25:  5\n",
+      "Total number of files in - snakes:  5\n",
+      "Total number of directories:  9\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in Tkinter callback\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\Tald\\miniconda3\\lib\\tkinter\\__init__.py\", line 1883, in __call__\n",
+      "    return self.func(*args)\n",
+      "  File \"<ipython-input-4-42ee464ecfe3>\", line 19, in run_scraper\n",
+      "    threading.Thread(image_preview(pic_lst, frame)).start()\n",
+      "  File \"C:\\Users\\Tald\\miniconda3\\lib\\threading.py\", line 784, in __init__\n",
+      "    assert group is None, \"group argument must be None for now\"\n",
+      "AssertionError: group argument must be None for now\n"
+     ]
+    }
+   ],
    "source": [
     "# Creat main app window frame\n",
     "root = tk.Tk()\n",
