Final version of python file
added some comment about the web driver file

--- a/Python Project - Web photos scraper.ipynb
+++ b/Python Project - Web photos scraper.ipynb
@@ -12,7 +12,7 @@
     "* This app does not download the full photo size but rather takes a screenshot of the image displayed in the web result page. \n",
     "Thus, reducing the download time and space taken by the photos in the folder.\n",
     "* For the app to work, you first must install a web driver. Go to [Selenium’s website](https://selenium-python.readthedocs.io/) \n",
-    "and follow the instruction for downloading your browser's web driver and place it in your **C:\\** root directory.\n",
+    "and follow the instruction for downloading your browser's web driver (in my case: 'chromedriver.exe') and place it in your **C:\\** root directory.\n",
     "* Download the app icon image file from the project repository and place it in the same folder as the python file. \n",
     "* When you click the search button(Run scraper), you won't see anything happening. \n",
     "I chose to disable the display the website opening for search, to make it more 'cleaner' in appearance.\n",
