Final version of python file
Fixed an issue with directory location in  path_list function

--- a/Python Project - Web photos scraper.ipynb
+++ b/Python Project - Web photos scraper.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,20 +102,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Functionalty for counting total number of directories and files in web scraper base directory\n",
     "global file_lst\n",
     "def path_list(input_path, path):\n",
-    "    APP_FOLDER = input_path\n",
     "    totalDir = 0\n",
     "    print(f'Searching in {input_path}')\n",
-    "    for base, dirs, files in os.walk(APP_FOLDER):\n",
+    "    for base, dirs, files in os.walk(input_path):\n",
     "        for Directory in dirs:\n",
     "            totalDir += 1\n",
-    "            totalFiles = (len(os.listdir(f'{input_path}/{Directory}')))\n",
+    "            totalFiles = (len(os.listdir(f'{input_path}')))\n",
     "            print(f'Total number of files in - {Directory}: ', totalFiles)    \n",
     "    print('Total number of directories: ', totalDir)\n",
     "    file_lst = os.listdir(f'{path}')\n",
@@ -131,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,6 +153,7 @@
     "    summery_lbl = tk.Label(root, text=('Done!  {} files in location: {}'.format(getImageNum, path)), font= \"Helvetica 12\", bg='lightgrey')\n",
     "    summery_lbl.grid(row=9, column=1, columnspan=4, sticky=\"w\")    \n",
     "    threading.Thread(image_preview(pic_lst, frame)).start()\n",
+    "    frame.update()\n",
     "    return \n",
     "\n",
     "# Generate a three images preview on app\n",
@@ -207,9 +207,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Searching in C:/Web scraper\n",
+      "Total number of files in - bee:  8\n",
+      "Total number of files in - bird:  8\n",
+      "Total number of files in - cheese:  8\n",
+      "Total number of files in - f-15:  8\n",
+      "Total number of files in - f-16:  8\n",
+      "Total number of files in - mig-25:  8\n",
+      "Total number of files in - moon:  8\n",
+      "Total number of files in - worm:  8\n",
+      "Total number of directories:  8\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in Tkinter callback\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\Tald\\miniconda3\\lib\\tkinter\\__init__.py\", line 1883, in __call__\n",
+      "    return self.func(*args)\n",
+      "  File \"<ipython-input-10-4c357d67af82>\", line 19, in run_scraper\n",
+      "    threading.Thread(image_preview(pic_lst, frame)).start()\n",
+      "  File \"C:\\Users\\Tald\\miniconda3\\lib\\threading.py\", line 784, in __init__\n",
+      "    assert group is None, \"group argument must be None for now\"\n",
+      "AssertionError: group argument must be None for now\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Searching in C:/Users/Tald/Downloads\n",
+      "Total number of files in - anka:  169\n",
+      "Total number of files in - bear:  169\n",
+      "Total number of files in - bee:  169\n",
+      "Total number of files in - chromedriver_win32:  169\n",
+      "Total number of files in - cows:  169\n",
+      "Total number of files in - dorian:  169\n",
+      "Total number of files in - mice:  169\n",
+      "Total number of files in - mouse:  169\n",
+      "Total number of files in - Web-photo-scraper-main:  169\n",
+      "Total number of files in - webinar-1-dataset:  169\n",
+      "Total number of files in - webinar-2-dataset:  169\n",
+      "Total number of files in - zero-to-mastery-ml-master:  169\n",
+      "Total number of files in - __MACOSX:  169\n",
+      "Total number of files in - בוק בת מצוה 2:  169\n",
+      "Total number of files in - בוק בת מצווה 1:  169\n",
+      "Total number of files in - anka:  169\n",
+      "Total number of files in - __MACOSX:  169\n",
+      "Total number of files in - anka:  169\n",
+      "Total number of files in - dorian:  169\n",
+      "Total number of files in - __MACOSX:  169\n",
+      "Total number of files in - dorian:  169\n",
+      "Total number of files in - Web-photo-scraper-main:  169\n",
+      "Total number of files in - .ipynb_checkpoints:  169\n",
+      "Total number of files in - __MACOSX:  169\n",
+      "Total number of files in - __MACOSX:  169\n",
+      "Total number of files in - zero-to-mastery-ml-master:  169\n",
+      "Total number of files in - data:  169\n",
+      "Total number of files in - images:  169\n",
+      "Total number of files in - section-1-getting-ready-for-machine-learning:  169\n",
+      "Total number of files in - section-2-data-science-and-ml-tools:  169\n",
+      "Total number of files in - section-3-structured-data-projects:  169\n",
+      "Total number of files in - section-4-unstructured-data-projects:  169\n",
+      "Total number of files in - slides:  169\n",
+      "Total number of files in - dorian:  169\n",
+      "Total number of directories:  34\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in Tkinter callback\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\Tald\\miniconda3\\lib\\tkinter\\__init__.py\", line 1883, in __call__\n",
+      "    return self.func(*args)\n",
+      "  File \"<ipython-input-10-4c357d67af82>\", line 19, in run_scraper\n",
+      "    threading.Thread(image_preview(pic_lst, frame)).start()\n",
+      "  File \"C:\\Users\\Tald\\miniconda3\\lib\\threading.py\", line 784, in __init__\n",
+      "    assert group is None, \"group argument must be None for now\"\n",
+      "AssertionError: group argument must be None for now\n"
+     ]
+    }
+   ],
    "source": [
     "# Creat main app window frame\n",
     "root = tk.Tk()\n",
